--- a/triangle.html
+++ b/triangle.html
@@ -5,13 +5,15 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-1.11.2.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Binary Conversion</title>
+  <title>Triangle Type Calculator</title>
 </head>
 <body>
   <div id = "container">
-    <form id="decimal">
-      <input type="text" id="decimal">
-      <button type='submit'>convert to binary</button>
+    <form id="triangle_form">
+      <input type="text" id="side1">
+      <input type="text" id="side2">
+      <input type="text" id="side3">
+      <button type='submit'>Show</button>
     <div class="result">
       <span id="output"></span>
     </div>
