Outputs 'not a triangle' if a side is 0 or less

--- a/triangle.html
+++ b/triangle.html
@@ -8,15 +8,30 @@
   <title>Triangle Type Calculator</title>
 </head>
 <body>
+
+  <h1>Triangle Identifier</h1>
+
   <div id = "container">
     <form id="triangle_form">
+
+      <label for="side1">side 1</label>
       <input type="text" id="side1">
+      <br>
+      <label for="side2">side 2</label>
       <input type="text" id="side2">
+      <br>
+      <label for="side3">side 3</label>
       <input type="text" id="side3">
+      <br>
+
       <button type='submit'>Show</button>
-    <div class="result">
-      <span id="output"></span>
-    </div>
-  </div>
+
+    <br>
+    <br>
+
+      <div class="result">
+        <span id="output"></span>
+      </div>
+
 </body>
 </html>
