Draw scalene, isosceles and equilateral triangles

--- a/triangle.html
+++ b/triangle.html
@@ -33,7 +33,8 @@
         <span id="output"></span>
       </div>
 
+      <div class="container">
       <div id="triangle-up"></div>
-
+    </div>
 </body>
 </html>
